--- a/sumo/tools/import/osm/index.html
+++ b/sumo/tools/import/osm/index.html
@@ -15,15 +15,15 @@
             <span id="position" class="container always">
                 Position
                 <div class="options">
-                    <label>Längengrad <input id="current-lon" /></label>
-                    <label>Breitengrad <input id="current-lat" /></label>
-                    <label id="set-position">aktueller Standort</label>
+                    <label>Longitude <input id="current-lon" /></label>
+                    <label>Latitude <input id="current-lat" /></label>
+                    <label id="set-position">Current Location</label>
                 </div>
             </span>
             <span class="container always">
-                <span id="export-button">Exportieren</span>
+                <span id="export-button">Generate Scenario</span>
                 <div class="options">
-                    <label>Bereich auswählen<input type="checkbox" id="canvas-toogle" /></label>
+                    <label>Select Area<input type="checkbox" id="canvas-toogle" /></label>
                 </div>
             </span>
         </div>
